--- a/style.css
+++ b/style.css
@@ -28,6 +28,21 @@ a {
   box-shadow: 0 0 10px 2px;
 }
 
+.score-container {
+    background-color: rgb(211, 121, 230);
+    width: 600px;
+    height: 200px;
+    border: 15px solid rgb(244, 247, 100);
+    border-radius: 5px;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0 0 10px 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
 .btn-grid {
     display: grid;
     grid-template-columns: repeat(2, auto);
